src/test/ui/tool-attributes/tool-attributes-misplaced-2.stderr
error: macro `rustfmt::skip` may not be used for derive attributes
  --> $DIR/tool-attributes-misplaced-2.rs:1:10
   |
LL | #[derive(rustfmt::skip)]
   |          ^^^^^^^^^^^^^

error: `rustfmt::skip` can only be used in attributes
  --> $DIR/tool-attributes-misplaced-2.rs:5:5
   |
LL |     rustfmt::skip!();
   |     ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

